--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "15.4.2",
     "react-native": "0.42.0",
     "react-native-splash-screen": "^2.0.0",
+    "react-native-text": "0.0.4",
     "react-navigation": "git@github.com:srdjanprpa/react-navigation.git"
   },
   "devDependencies": {
