--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "pretest": "eslint src/",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "ios": "react-native run-ios",
     "android": "react-native run-android"
@@ -15,20 +16,20 @@
   "dependencies": {
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
-    "react": "15.4.2",
-    "react-native": "0.42.0",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.44.0",
     "react-native-splash-screen": "^2.0.0",
     "react-native-text": "0.0.4",
-    "react-navigation": "git@github.com:srdjanprpa/react-navigation.git"
+    "react-navigation": "^1.0.0-beta.10"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
-    "babel-jest": "18.0.0",
+    "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
     "eslint": "^3.15.0",
     "eslint-plugin-react": "^6.9.0",
-    "jest": "18.1.0",
-    "react-test-renderer": "15.4.2"
+    "jest": "19.0.2",
+    "react-test-renderer": "16.0.0-alpha.6"
   },
   "rnpm": {
     "assets": [
